docs/envoy/v1.14.0/_sources/api-v3/type/matcher/v3/regex.proto.rst.txt
.. _envoy_v3_api_file_envoy/type/matcher/v3/regex.proto:

Regex matcher
=============


.. _envoy_v3_api_msg_type.matcher.v3.RegexMatcher:

type.matcher.v3.RegexMatcher
----------------------------

`[type.matcher.v3.RegexMatcher proto] <https://github.com/envoyproxy/envoy/blob/v1.14.0/api/envoy/type/matcher/v3/regex.proto#L18>`_

A regex matcher designed for safety when used with untrusted input.

.. code-block:: json

  {
    "google_re2": "{...}",
    "regex": "..."
  }

.. _envoy_v3_api_field_type.matcher.v3.RegexMatcher.google_re2:

google_re2
  (:ref:`type.matcher.v3.RegexMatcher.GoogleRE2 <envoy_v3_api_msg_type.matcher.v3.RegexMatcher.GoogleRE2>`, *REQUIRED*) Google's RE2 regex engine.
  
  
  
.. _envoy_v3_api_field_type.matcher.v3.RegexMatcher.regex:

regex
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The regex match string. The string must be supported by the configured engine.
  
  
.. _envoy_v3_api_msg_type.matcher.v3.RegexMatcher.GoogleRE2:

type.matcher.v3.RegexMatcher.GoogleRE2
--------------------------------------

`[type.matcher.v3.RegexMatcher.GoogleRE2 proto] <https://github.com/envoyproxy/envoy/blob/v1.14.0/api/envoy/type/matcher/v3/regex.proto#L24>`_

Google's `RE2 <https://github.com/google/re2>`_ regex engine. The regex string must adhere to
the documented `syntax <https://github.com/google/re2/wiki/Syntax>`_. The engine is designed
to complete execution in linear time as well as limit the amount of memory used.

.. code-block:: json

  {
    "max_program_size": "{...}"
  }

.. _envoy_v3_api_field_type.matcher.v3.RegexMatcher.GoogleRE2.max_program_size:

max_program_size
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) This field controls the RE2 "program size" which is a rough estimate of how complex a
  compiled regex is to evaluate. A regex that has a program size greater than the configured
  value will fail to compile. In this case, the configured max program size can be increased
  or the regex can be simplified. If not specified, the default is 100.
  
  



.. _envoy_v3_api_msg_type.matcher.v3.RegexMatchAndSubstitute:

type.matcher.v3.RegexMatchAndSubstitute
---------------------------------------

`[type.matcher.v3.RegexMatchAndSubstitute proto] <https://github.com/envoyproxy/envoy/blob/v1.14.0/api/envoy/type/matcher/v3/regex.proto#L48>`_

Describes how to match a string and then produce a new string using a regular
expression and a substitution string.

.. code-block:: json

  {
    "pattern": "{...}",
    "substitution": "..."
  }

.. _envoy_v3_api_field_type.matcher.v3.RegexMatchAndSubstitute.pattern:

pattern
  (:ref:`type.matcher.v3.RegexMatcher <envoy_v3_api_msg_type.matcher.v3.RegexMatcher>`) The regular expression used to find portions of a string (hereafter called
  the "subject string") that should be replaced. When a new string is
  produced during the substitution operation, the new string is initially
  the same as the subject string, but then all matches in the subject string
  are replaced by the substitution string. If replacing all matches isn't
  desired, regular expression anchors can be used to ensure a single match,
  so as to replace just one occurrence of a pattern. Capture groups can be
  used in the pattern to extract portions of the subject string, and then
  referenced in the substitution string.
  
  
.. _envoy_v3_api_field_type.matcher.v3.RegexMatchAndSubstitute.substitution:

substitution
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The string that should be substituted into matching portions of the
  subject string during a substitution operation to produce a new string.
  Capture groups in the pattern can be referenced in the substitution
  string. Note, however, that the syntax for referring to capture groups is
  defined by the chosen regular expression engine. Google's `RE2
  <https://github.com/google/re2>`_ regular expression engine uses a
  backslash followed by the capture group number to denote a numbered
  capture group. E.g., ``\1`` refers to capture group 1, and ``\2`` refers
  to capture group 2.
  
  

